PDF helper added, websocket error  fixed

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               </li>
               <li class="nav-item">
                 <a href="#pdf_panel" aria-controls="pdf_panel" role="tab" data-toggle="tab"
-                  class="nav-link"><b>PDFxtract</b></a>
+                  class="nav-link"><b>PDFhelper</b></a>
               </li>
             </ul>
             <div class="tab-content">
